# flashcard-app

./: LICENSE  flashcard-app.py  n5-vocab - Topic10.csv  n5-vocab - Topic11.csv  n5-vocab - Topic12.csv  n5-vocab - Topic13.csv  n5-vocab - Topic14.csv  n5-vocab - Topic15.csv  n5-vocab.csv  pyproject.toml  requirements.txt
static/: style-backup.css  style.css
templates/: index.html  index_app.html  index_practice.html
